--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,15 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "index.ts",
-      "use": "@vercel/node"
+      "src": "Dockerfile",
+      "use": "@vercel/docker"
     }
   ],
-  "outputDirectory": "."
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
 }
